<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">COMP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="logout">退出账号</string>
	<string name="settings_title">系统设置</string>
	<string name="notice_remind">通知与提醒</string>
	<string name="clear_cache">清除缓存</string>
	<string name="change_password">修改密码</string>
	<string name="mobile_info">查看本机信息</string>
	<string name="feedback">意见反馈</string>
	<string name="version_updating">版本检测</string>
	<string name="current_version">当前版本为：</string>
	<string name="hint_originalpwd">请输入原始密码</string>
	<string name="hint_newpwd">请输入新密码</string>
	<string name="hint_surepwd">请再次输入密码</string>
	<string name="save_pwd">保存</string>
	
	
	
	<string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
	
	<!--登录login  -->
	<string name="login_userid">请输入账号</string>
	<string name="login_userpwd">请输入密码</string>
	<string name="login_verificationcode">请输入验证码</string>
	<string name="login_enter">登           录</string>
	<string name="login_rememberpwd">记住密码</string>
	<string name="login_forgetpwd">忘记密码</string>
	<string name="login_defaultcode">1234</string>
	<string name="login_title">客服中心综合运营管理平台</string>
	
	<!--主页  -->
	<string name="menutab_mine">我的</string>
	<string name="menutab_hr">人资</string>
	<string name="menutab_indicator">指标</string>
	<string name="menutab_more">更多</string>
	
	<string-array name="quarter">
	    <item>第一季度</item>
	      <item>第二季度</item>
	        <item>第三季度</item>
	          <item>第四季度</item>
	</string-array>
	
</resources>
