<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:measureWithLargestChild="true"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/logo_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:background="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_title"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center" >

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/edt_userid"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="0.35"
            android:background="@drawable/input"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="20dp"
            android:hint="@string/login_userid"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="horizontal" >

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/edt_userpwd"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="0.35"
            android:background="@drawable/input"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="20dp"
            android:hint="@string/login_userpwd"
            android:password="true"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/yzm_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.35" >

            <EditText
                android:id="@+id/edt_verificationcode"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/input"
                android:drawableLeft="@drawable/ic_verificationcode"
                android:drawablePadding="20dp"
                android:hint="@string/login_verificationcode" />

            <TextView
                android:id="@+id/tv_verificationcode"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="3"
                android:background="@drawable/btn_login"
                android:ems="10"
                android:gravity="center"
                android:text="@string/login_defaultcode" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:visibility="visible" >

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/cb_rememberpsw"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_weight="0.75"
            android:button="@drawable/check_selector"
            android:checked="false"
            android:text="@string/login_rememberpwd"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2" />

        <TextView
            android:id="@+id/tv_forgetpsw"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.75"
            android:drawableLeft="@drawable/ic_forget"
            android:gravity="left|center_vertical"
            android:text="@string/login_forgetpwd"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center" >

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_user_selected"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="0.35"
            android:background="@drawable/btn_login"
            android:text="@string/login_enter"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.4" />

</LinearLayout>