<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/top_bg"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >
        </FrameLayout>

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/menu_bottom"
            android:gravity="center" >

            <!-- 主页 -->

            <LinearLayout
                android:id="@+id/home_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="btn_tab"
                android:orientation="vertical"
                android:padding="5dp" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/my_pre" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menutab_mine"
                    android:textColor="@color/app_green" />
            </LinearLayout>

            <!-- 人资 -->

            <LinearLayout
                android:id="@+id/hr_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="btn_tab"
                android:orientation="vertical"
                android:padding="5dp" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/hr_nor" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menutab_hr"
                    android:textColor="@color/nav_gray" />
            </LinearLayout>

            <!-- 指标 -->

            <LinearLayout
                android:id="@+id/indi_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="btn_tab"
                android:orientation="vertical"
                android:padding="5dp" >

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/indicator_nor" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menutab_indicator"
                    android:textColor="@color/nav_gray" />
            </LinearLayout>

            <!-- 流程 -->

            <LinearLayout
                android:id="@+id/process_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="btn_tab"
                android:orientation="vertical"
                android:padding="5dp" >

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2" >

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/process_nor" />

                    <TextView
                        android:id="@+id/unred_num"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="right"
                        android:background="@drawable/circle"
                        android:gravity="center"
                   		android:visibility="gone"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        />
                </FrameLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="流程"
                    android:textColor="@color/nav_gray" />
            </LinearLayout>

            <!-- 更多 -->

            <LinearLayout
                android:id="@+id/more_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="btn_tab"
                android:orientation="vertical"
                android:padding="5dp" >

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/more_nor" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menutab_more"
                    android:textColor="@color/nav_gray" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</TabHost>